--- a/resources/application.conf
+++ b/resources/application.conf
@@ -5,18 +5,12 @@ ktor {
     }
 
     application {
-        modules = [ io.ktor.samples.youkube.YoukubeApplicationKt.main ]
+        modules = [ com.terrakublin.Application.main ]
     }
 }
 
-youkube {
-    session {
-        cookie {
-            key = 03e156f6058a13813816065
-        }
-    }
-
+terrakublin {
     upload {
-        dir = .youkube-video
+        dir = .terrakublin
     }
 }
