--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ docker {
 
 dockerRun {
     name 'terrakublin-container'
-    image 'terrakublin'
+    image System.getenv("IMAGE_NAME")
     ports '80:8080'
     command "java", "-server", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-XX:InitialRAMFraction=2", "-XX:MinRAMFraction=2", "-XX:MaxRAMFraction=2", "-XX:+UseG1GC", "-XX:MaxGCPauseMillis=100", "-XX:+UseStringDeduplication", "-jar", "terrakublin.jar"
 }
