--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
 plugins {
     id 'com.palantir.docker' version '0.22.1'
     id 'com.palantir.docker-run' version '0.22.1'
-
+    id 'com.palantir.docker-test-runner' version '0.22.1'
 }
 
 apply plugin: 'kotlin'
@@ -25,7 +25,7 @@ sourceSets {
 }
 
 docker {
-    name ''
+    name System.getenv("IMAGE_NAME")
 }
 
 dockerRun {
@@ -33,6 +33,12 @@ dockerRun {
     image System.getenv("IMAGE_NAME")
     ports '80:8080'
     command "java", "-server", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-XX:InitialRAMFraction=2", "-XX:MinRAMFraction=2", "-XX:MaxRAMFraction=2", "-XX:+UseG1GC", "-XX:MaxGCPauseMillis=100", "-XX:+UseStringDeduplication", "-jar", "terrakublin.jar"
+}
+
+dockerTestRunner {
+    dockerFiles fileTree(project.rootDir) {
+        include '**/Dockerfile'
+    }
 }
 
 repositories {
