--- a/shippable.yml
+++ b/shippable.yml
@@ -22,7 +22,12 @@ build:
   pre_ci:
     - cd $TERRAFORM_DIR
     - ./build_and_deploy.sh
-    - gradlew build
+    - gradle build
+    - gradle dockerClean
+    - gradle dockerPrepare
+    - gradle docker
+    - gradle dockerTag latest
+    - gradle dockerPushLatest
 
   pre_ci_boot:
     image_name: $IMAGE_NAME   ##replace with your repo and image name
@@ -30,8 +35,8 @@ build:
     pull: true
 
   ci:
-    - if [ "$BRANCH" == "master" ]; then gradlew test; fi
-    - if [ "$BRANCH" == "develop" ] && [ "$IS_PULL_REQUEST" == true ]; then gradlew test; fi
+    - if [ "$BRANCH" == "master" ]; then gradle dockerTestRunner; fi
+    - if [ "$BRANCH" == "develop" ] && [ "$IS_PULL_REQUEST" == true ]; then gradle dockerTestRunner; fi
 
 
 
