--- a/shippable.yml
+++ b/shippable.yml
@@ -38,7 +38,8 @@ build:
     - gradle dockerTestRunner
 
   post_ci:
-    - if [ "$BRANCH" == "master" ]; then gradle dockerPushLatest; fi
+    - gradle dockerPushLatest
+    - ./build_and_deploy.sh
 
 
 # Integrations are used to connect external resources to CI
