adding shippable, terraform

--- a/shippable.yml
+++ b/shippable.yml
@@ -17,12 +17,14 @@ env:
     - SRC_DIR=$SHIPPABLE_REPO_DIR/src
     - TESTS_DIR=$SHIPPABLE_REPO_DIR/test
     - TERRAFORM_DIR=$SHIPPABLE_REPO_DIR/terraform
+    - if [ "$BRANCH" == "master" ]; then ENV=production; fi
+    - if [ "$BRANCH" == "develop" ]; then ENV=develop; fi
 
 build:
   pre_ci:
     - cd $TERRAFORM_DIR
     - ./build_and_deploy.sh
-    - ./gradlew build
+    - ./gradlew clean build
     - ./gradlew dockerClean
     - ./gradlew dockerPrepare
     - ./gradlew docker
