--- a/shippable.yml
+++ b/shippable.yml
@@ -1,7 +1,7 @@
 language: java
 
 jdk:
-  - oraclejdk8
+  - openjdk11
 
 # use this to control what branches get built.
 # http://docs.shippable.com/ci/advancedOptions/branches/
