adding shippable, terraform

--- a/resources/application.conf
+++ b/resources/application.conf
@@ -5,12 +5,12 @@ ktor {
     }
 
     application {
-        modules = [ com.terrakublin.Application.main ]
+        modules = [ com.terrakublin-aws.Application.main ]
     }
 }
 
-terrakublin {
+terrakublin-aws {
     upload {
-        dir = .terrakublin
+        dir = .terrakublin_aws
     }
 }
