--- a/shippable.yml
+++ b/shippable.yml
@@ -42,6 +42,6 @@ build:
 # http://docs.shippable.com/integrations/overview/
 integrations:
   hub:
-    - integrationName: shippable_terrakublin
+    - integrationName: shippable_terrakublin_aws
       region: us-east-1
       type: ecr
