--- a/shippable.yml
+++ b/shippable.yml
@@ -12,16 +12,18 @@ branches:
 
 build:
   pre_ci:
+    - sdk use gradle 5.2.1
     - if [ "$BRANCH" == "master" ]; then export ENV=production; fi
     - if [ "$BRANCH" == "develop" ]; then export ENV=develop; fi
     - pushd terraform
     - ./build_and_deploy.sh
     - popd
-    - gradle assemble
-    - gradle dockerClean
-    - gradle dockerPrepare
-    - gradle docker
-    - gradle dockerTag latest
+    - gradle wrapper --gradle-version 5.2.1
+    - ./gradlew assemble
+    - ./gradlew dockerClean
+    - ./gradlew dockerPrepare
+    - ./gradlew docker
+    - ./gradlew dockerTag latest
 
   pre_ci_boot:
     image_name: $IMAGE_NAME   ##replace with your repo and image name
@@ -29,10 +31,10 @@ build:
     pull: false
 
   ci:
-    - gradle dockerTestRunner
+    - ./gradlew dockerTestRunner
 
   post_ci:
-    - gradle dockerPushLatest
+    - ./gradlew dockerPushLatest
     - pushd terraform
     - ./build_and_deploy.sh
     - popd
