--- a/shippable.yml
+++ b/shippable.yml
@@ -12,8 +12,8 @@ branches:
 
 build:
   pre_ci:
-    - export SDKMAN_DIR=".sdkman"
-    - source ".sdkman/bin/sdkman-init.sh"
+    - export SDKMAN_DIR="$HOME/.sdkman"
+    - source "$HOME/.sdkman/bin/sdkman-init.sh"
     - sdk use gradle 5.2.1
     - if [ "$BRANCH" == "master" ]; then export ENV=production; fi
     - if [ "$BRANCH" == "develop" ]; then export ENV=develop; fi
