--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,13 @@
 /out
 /build
 *.iml
-.terraform/*
-*/.terraform/
+
+# Local .terraform directories
+**/.terraform/*
+
+# .tfstate files
 *.tfstate
-*.backup
+*.tfstate.*
+
+# Crash log files
+crash.log
