--- a/shippable.yml
+++ b/shippable.yml
@@ -14,7 +14,7 @@ build:
     - jq -r "to_entries|map(\"\(.key)=\(.value|tostring)\")|.[]" terraform/infra/terraform.out
     - if [ "$BRANCH" == "master" ]; then export ENV=production; fi
     - if [ "$BRANCH" == "develop" ]; then export ENV=develop; fi
-    - docker build -t $IMAGE_NAME:$BRANCH.$BUILD_NUMBER .
+    - docker build -t $IMAGE_NAME:$BRANCH$BUILD_NUMBER .
 
   post_ci:
     - docker push $IMAGE_NAME:$BRANCH.$BUILD_NUMBER
