--- a/shippable.yml
+++ b/shippable.yml
@@ -14,10 +14,11 @@ build:
     - jq -r "to_entries|map(\"\(.key)=\(.value|tostring)\")|.[]" terraform/infra/terraform.out
     - if [ "$BRANCH" == "master" ]; then export ENV=production; fi
     - if [ "$BRANCH" == "develop" ]; then export ENV=develop; fi
-    - docker build -t $IMAGE_NAME:$BRANCH$BUILD_NUMBER .
+    - docker build -t $IMAGE_NAME:$BRANCH .
 
   post_ci:
-    - docker push $IMAGE_NAME:$BRANCH.$BUILD_NUMBER
+    - docker push $IMAGE_NAME:$BRANCH
+    - docker tag $IMAGE_NAME:latest $IMAGE_NAME:$BRANCH
 
 # Integrations are used to connect external resources to CI
 # http://docs.shippable.com/integrations/overview/
