adding shippable, terraform

--- a/shippable.yml
+++ b/shippable.yml
@@ -14,11 +14,15 @@ build:
     - jq -r "to_entries|map(\"\(.key)=\(.value|tostring)\")|.[]" terraform/infra/terraform.out
     - if [ "$BRANCH" == "master" ]; then export ENV=production; fi
     - if [ "$BRANCH" == "develop" ]; then export ENV=develop; fi
-    - docker build -t "$IMAGE_NAME:$BRANCH" .
+    - TAG=$$(git log -1 --pretty=%!H(MISSING))
+    - IMG=$NAME:$TAG
+    - LATEST=$NAME:latest
+    - docker build -t $IMG .
+    - docker tag $IMG$LATEST
 
   post_ci:
-    - docker push "$IMAGE_NAME:$BRANCH"
-    - docker tag "$IMAGE_NAME:latest" "$IMAGE_NAME:$BRANCH"
+    -docker push $NAME
+    - docker tag $LATEST $NAME
 
 # Integrations are used to connect external resources to CI
 # http://docs.shippable.com/integrations/overview/
