--- a/shippable.yml
+++ b/shippable.yml
@@ -18,10 +18,10 @@ build:
     - IMG=$NAME:$TAG
     - echo $IMG
     - LATEST=$NAME:latest
-    - docker build -t $IMG .
+    - docker build -t $TAG .
 
   post_ci:
-    - docker push $NAME
+    - docker push
     - docker tag $LATEST $NAME
 
 # Integrations are used to connect external resources to CI
