--- a/shippable.yml
+++ b/shippable.yml
@@ -15,7 +15,7 @@ build:
     - gradle build
     - gradle test
     - if [ "$BRANCH" == "master" ]; then export ENV=production; fi
-    - if [ "$BRANCH" == "develop" ]; then export ENV=develop; fi
+    - if [ "$BRANCH" == "develop" ]; then export ENV=staging; fi
     - NAME=012411446813.dkr.ecr.us-east-1.amazonaws.com/terrakublin_ecr
     - IMG=$NAME:$COMMIT
     - echo $IMG
